2005-01-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/chronos/images/chronos-tuxtree1.png: fixed to include a background 
	* boards/chronos/images/chronos-tuxtree2.png: -
	* boards/chronos/images/chronos-tuxtree3.png: -
	* boards/chronos/images/chronos-tuxtree4.png: -
	* docs/Makefile.am: fixed
	* gcompris.spec.in: fixed
	* src/boards/python/searace.py: implemented one player mode (hidden for now)
	activate it with the shift key to get a tux program

2005-01-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/searace.py: improved the command parsing
	* configure.in: changed to release 6.5PRE1

2005-01-10  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/erase.c: (erase_destroy_all_items): fixed a potential bug
	* src/boards/python/searace.py: now the text box are not editable when the course runs

2005-01-10  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/erase.c: (pause_board), (bonus), (finished),
	(game_won), (item_event): added a timer before the bonus to let kid appreciate the image

2005-01-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/boardicons/tuxpara.png: added the boat to make it easier to catch
	* boards/chronos/board3_0.xml.in: added more info on each item
	* boards/chronos/board3_1.xml.in: -
	* boards/chronos/board3_2.xml.in: -
	* boards/chronos/board3_3.xml.in: -
	* boards/chronos/board3_4.xml.in: -
	* boards/searace.xml.in: updated the help
	* docs/C/python.xml: added a missing #define for BAR_REPEAT_ICON
	* src/boards/paratrooper.c: (paratrooper_next_level): make the boat larger initialy
	* src/boards/py-mod-gcompris.c: (python_gcompris_module_init): added missing BAR_REPEAT_ICON
	* src/boards/python/hexagon.py: removed useless comments. added a timeout on a win to let the kid see the strawberry
	* src/boards/python/searace.py: updated and completed.
	* src/boards/traffic.c: (cars_from_strv): changed a color too close to the background

2005-01-09  Bruno coudoin  <bruno.coudoin@free.fr>
