@@ -122,6 +122,7 @@ boards/redraw.xml.in
 boards/redraw_symmetrical.xml.in
 boards/reversecount.xml.in
 boards/searace.xml.in
+boards/searace1player.xml.in
 boards/scales/board1_0.xml.in
 boards/scales/board1_1.xml.in
 boards/scales/board1_2.xml.in
