@@ -1,3 +1,13 @@
+2005-01-18  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Added one player searace
+	
+	* boards/Makefile.am:
+	* boards/boardicons/searace1player.png:
+	* boards/images/top_boat_green_tux.png:
+	* po/POTFILES.in:
+	* src/boards/python/searace.py:
+
 2005-01-16  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/chronos/images/chronos-tuxtree1.png: fixed to include a background 
